gcc/testsuite/g++.dg/template/function2.C
@@ -1,0 +1,8 @@
+// PR c++/83258
+
+template<void(*)()> struct A { };
+
+int main() {
+  struct B { static void f() { } };
+  A<B::f> a; // { dg-error "linkage" "" { target c++14_down } }
+}
